TASK-55597 Add JDK 17 support for runtime on Windows
Prior to this change, when starting the Meeds package with JRE 17, an error is raised about accessing `java.util.concurrent.atomic` package using reflection API. This change will fix this error.